--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,11 @@
     "i": "^0.3.6",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-notifications": "^1.4.3",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.2",
+    "reactstrap": "^7.0.2",
     "redux": "^4.0.1"
   },
   "scripts": {
