menu bar improved user function on server

--- a/WebAPI/WebAPI/Web.config
+++ b/WebAPI/WebAPI/Web.config
@@ -5,7 +5,9 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="Default" connectionString="server=.\SQLEXPRESS;database=Guardage;integrated security=sspi" />    
+    <add name="Default" connectionString="server=.\SQLEXPRESS;database=Guardage;integrated security=sspi" />
+    <!--<add name="Default" connectionString="Server=tcp:deuerleinr.database.windows.net,1433;Initial Catalog=guardage2;Persist Security Info=False;User ID=deuerleinr;Password=Pig01boy!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />-->
+    
   </connectionStrings>
   <appSettings file="Secrets.config"></appSettings>
   <system.web>
@@ -44,10 +46,34 @@
     </compilers>
   </system.codedom>
 <system.webServer>
+  <rewrite>
+    <rules>
+      <rule name="Node WebSocket">
+        <match url="^socket\.io/" />
+        <action type="Rewrite" url="node-api/server.js/{REQUEST_URI}" />
+      </rule>
+      <rule name="Node API" stopProcessing="true">
+        <match url="^node-api/server.js/" />
+      </rule>
+      <rule name="Content" stopProcessing="true">
+        <conditions logicalGrouping="MatchAll">
+          <add input="{APPL_PHYSICAL_PATH}client{PATH_INFO}" matchType="IsFile" />
+        </conditions>
+        <action type="Rewrite" url="/client/{REQUEST_URI}" />
+      </rule>
+      <rule name="Pass through to ASP.NET" stopProcessing="true">
+        <match url="^(signalr/|api/|Scripts/)" ignoreCase="true" />
+      </rule>
+      <rule name="Client side URLs" stopProcessing="true">
+        <action type="Rewrite" url="/client/index.html" />
+      </rule>
+    </rules>
+  </rewrite>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
-  </system.webServer></configuration>
+  </system.webServer>
+</configuration>
