--- a/WebAPI/WebAPI/WebAPI.csproj
+++ b/WebAPI/WebAPI/WebAPI.csproj
@@ -43,6 +43,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DevOne.Security.Cryptography.BCrypt, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\BCrypt.1.0.0.0\lib\DevOne.Security.Cryptography.BCrypt.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
@@ -114,13 +117,16 @@
   <ItemGroup>
     <Content Include="Global.asax" />
     <EmbeddedResource Include="Services\TakeDownEmailTemplate.html" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\UnityConfig.cs" />
     <Compile Include="App_Start\UnityWebApiActivator.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\ListingController.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\SellerController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -129,20 +135,33 @@
     <Compile Include="Models\Listing.cs" />
     <Compile Include="Models\ListingCreate.cs" />
     <Compile Include="Models\ListingUpdateRequest.cs" />
+    <Compile Include="Models\LoginCreate.cs" />
+    <Compile Include="Models\LoginResult.cs" />
     <Compile Include="Models\PagedResponse.cs" />
     <Compile Include="Models\SearchListingResponse.cs" />
     <Compile Include="Models\Seller.cs" />
     <Compile Include="Models\SellerCreate.cs" />
+    <Compile Include="Models\UserLoginRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\EmailService.cs" />
     <Compile Include="Services\IListingService.cs" />
     <Compile Include="Services\ISellerService.cs" />
     <Compile Include="Services\ListingService.cs" />
+    <Compile Include="Services\LoginService.cs" />
     <Compile Include="Services\SellerService.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="client/**/*">
+      <Visible>false</Visible>
+    </Content>
+    <Content Include="node-api/**/*">
+      <Visible>false</Visible>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Secrets.config" />
+    <None Include="Properties\PublishProfiles\guardage - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
