--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
-  "name": "client",
+  "name": "guardage",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.18.0",
-    "i": "^0.3.6",
+    "bootstrap": "^4.2.1",
+    "feather-icons": "^4.12.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-notifications": "^1.4.3",
-    "react-redux": "^6.0.0",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.3",
-    "reactstrap": "^7.0.2",
-    "redux": "^4.0.1"
+    "react-scripts": "2.1.3",
+    "reactstrap": "^7.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,9 +24,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "proxy": "http://localhost:65530",
-  "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.6.3"
-  }
+  ]
 }
