--- a/WebAPI/WebAPI/Web.config
+++ b/WebAPI/WebAPI/Web.config
@@ -5,8 +5,8 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="Default" connectionString="server=.\SQLEXPRESS;database=Guardage;integrated security=sspi" />
-    <!--<add name="Default" connectionString="Server=tcp:deuerleinr.database.windows.net,1433;Initial Catalog=guardage2;Persist Security Info=False;User ID=deuerleinr;Password=Pig01boy!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />-->
+    <!--<add name="Default" connectionString="server=.\SQLEXPRESS;database=Guardage;integrated security=sspi" />-->
+   <add name="Default" connectionString="Server=tcp:deuerleinr.database.windows.net,1433;Initial Catalog=guardage2;Persist Security Info=False;User ID=deuerleinr;Password=Pig01boy!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />
     
   </connectionStrings>
   <appSettings file="Secrets.config"></appSettings>
