--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "i": "^0.3.6",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "jwt-decode": "^2.2.0",
+    "react": "next",
+    "react-dom": "next",
     "react-notifications": "^1.4.3",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
