--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "jwt-decode": "^2.2.0",
     "react": "next",
     "react-dom": "next",
+    "react-google-login": "^5.0.2",
     "react-notifications": "^1.4.3",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
