--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
     "i": "^0.3.6",
     "jwt-decode": "^2.2.0",
     "react": "next",
@@ -13,7 +14,7 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
-    "reactstrap": "^7.0.2",
+    "reactstrap": "^7.1.0",
     "redux": "^4.0.1"
   },
   "scripts": {
